# CPPFastAPI

./: CMakeLists.txt  README.md
.github/workflows/: windows.yml
include/: app.h
include/Additional/: Form.h  Header.h  JSONResponse.h  Router.h  request.h  response.h
include/Params/: CookieParams.h  PathParams.h  QueryParams.h
include/Task/: BackgroundTasks.h  DependencyContainer.h  UploadFile.h  WebSocket.h
src/: BackgroundTasks.cpp  CookieParams.cpp  DependencyContainer.cpp  Form.cpp  Header.cpp  JSONResponse.cpp  PathParams.cpp  QueryParams.cpp  Router.cpp  UploadFile.cpp  WebSocket.cpp  request.cpp  response.cpp
